[improved][alfresco-promena-activemq-client] Changed conception of handling exceptions. Instead of remaining a last error in queue - a last error is got from queue, the transaction is completed and the exception isn't put in a queue again

--- a/mm/alfresco-promena-activemq-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-activemq-client/src/test/resources/alfresco-global-test.properties
@@ -12,7 +12,7 @@ promena.client.transformation.error.retry.next-attempt-delay=0ms
 promena.client.activemq.consumer.queue.request=Promena.request
 promena.client.activemq.consumer.queue.response=Promena.response
 promena.client.activemq.consumer.queue.response.error=Promena.response.error
-promena.client.activemq.consumer.queue.response.error.selector=send_back_retry_enabled = TRUE AND send_back_attempt < send_back_retry_max_attempts
+promena.client.activemq.consumer.queue.response.error.selector=send_back_attempt <= send_back_retry_max_attempts
 
 promena.client.activemq.spring.activemq.broker-url=failover:(nio://localhost:{PORT})?timeout=3000&jms.useCompression=true
 promena.client.activemq.spring.jms.pub-sub-domain=false
