--- a/mm/alfresco-promena-activemq-client/src/main/resources/alfresco/module/alfresco-promena-activemq-client/alfresco-global.properties
+++ b/mm/alfresco-promena-activemq-client/src/main/resources/alfresco/module/alfresco-promena-activemq-client/alfresco-global.properties
@@ -7,4 +7,4 @@ promena.client.activemq.spring.jms.listener.max-concurrency=1
 promena.client.activemq.consumer.queue.request=Promena.request
 promena.client.activemq.consumer.queue.response=Promena.response
 promena.client.activemq.consumer.queue.response.error=Promena.response.error
-promena.client.activemq.consumer.queue.response.error.selector=send_back_retry_enabled = TRUE AND send_back_attempt < send_back_retry_max_attempts
+promena.client.activemq.consumer.queue.response.error.selector=send_back_attempt <= send_back_retry_max_attempts
