--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/test/resources/base-docker-test.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/test/resources/base-docker-test.properties
@@ -1,7 +1,7 @@
 docker.test.project.path=${basedir}
 docker.test.project.container.path=/test
 
-docker.test.maven.container.test.command=surefire:test
+docker.test.maven.container.test.command=surefire:test -DtrimStackTrace=false
 docker.test.maven.container.test.run-after=rm -Rf /test/target/surefire-reports
 
 docker.test.image.name=
