--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/test/resources/base-docker-test.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/test/resources/base-docker-test.properties
@@ -2,7 +2,7 @@ docker.test.project.path=${basedir}
 docker.test.project.container.path=/test
 
 docker.test.maven.container.test.command=surefire:test -DtrimStackTrace=false
-docker.test.maven.container.test.run-after=rm -Rf /test/target/surefire-reports
+docker.test.maven.container.test.run-after=chown -R 1000:1000 ${docker.test.project.container.path}
 
 docker.test.image.name=
 docker.test.image.custom.enabled=true
