[added][alfresco-promena-activemq-client] Info about available properties [added][promena-connector-activemq] Info about available properties

--- a/extension/connector/activemq/promena-connector-activemq-configuration/src/main/resources/module-connector-activemq.properties
+++ b/extension/connector/activemq/promena-connector-activemq-configuration/src/main/resources/module-connector-activemq.properties
@@ -1,3 +1,8 @@
+promena.connector.activemq.consumer.queue.request=Promena.request
+promena.connector.activemq.consumer.queue.response=Promena.response
+promena.connector.activemq.consumer.queue.response.error=Promena.response.error
+
+# https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html (ACTIVEMQ and JMS sections)
 spring.activemq.broker-url=failover:(nio://localhost:61616)?timeout=3000&jms.useCompression=true
 spring.jms.pub-sub-domain=false
 
@@ -7,7 +12,3 @@ spring.activemq.pool.enabled=false
 
 spring.jms.listener.concurrency=1
 spring.jms.listener.max-concurrency=1
-
-promena.connector.activemq.consumer.queue.request=Promena.request
-promena.connector.activemq.consumer.queue.response=Promena.response
-promena.connector.activemq.consumer.queue.response.error=Promena.response.error
