--- a/mm/alfresco-promena-activemq-client/src/main/resources/alfresco/module/alfresco-promena-activemq-client/alfresco-global.properties
+++ b/mm/alfresco-promena-activemq-client/src/main/resources/alfresco/module/alfresco-promena-activemq-client/alfresco-global.properties
@@ -1,10 +1,37 @@
+promena.client.activemq.consumer.queue.request=Promena.request
+promena.client.activemq.consumer.queue.response=Promena.response
+promena.client.activemq.consumer.queue.response.error=Promena.response.error
+promena.client.activemq.consumer.queue.response.error.selector=send_back_attempt <= send_back_retry_max_attempts
+
+# Supported properties - the majority of https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html (ACTIVEMQ and JMS sections) with prefix "promena.client.activemq":
+# - spring.jms.pub-sub-domain
+# - spring.jms.listener.auto-startup
+# - spring.jms.listener.acknowledge-mode
+# - spring.jms.listener.concurrency
+# - spring.jms.listener.max-concurrency
+# - spring.jms.template.default-destination
+# - spring.jms.template.delivery-delay
+# - spring.jms.template.delivery-mode
+# - spring.jms.template.priority
+# - spring.jms.template.receive-timeout
+# - spring.jms.template.time-to-live
+# - spring.jms.template.qos-enabled
+# - spring.activemq.broker-url
+# - spring.activemq.close-timeout
+# - spring.activemq.in-memory
+# - spring.activemq.non-blocking-redelivery
+# - spring.activemq.password
+# - spring.activemq.send-timeout
+# - spring.activemq.user
+# - spring.activemq.packages.trust-all
+# - spring.activemq.packages.trusted
 promena.client.activemq.spring.activemq.broker-url=${messaging.broker.url}
 promena.client.activemq.spring.jms.pub-sub-domain=false
 
 promena.client.activemq.spring.jms.listener.concurrency=1
 promena.client.activemq.spring.jms.listener.max-concurrency=1
 
-promena.client.activemq.consumer.queue.request=Promena.request
-promena.client.activemq.consumer.queue.response=Promena.response
-promena.client.activemq.consumer.queue.response.error=Promena.response.error
-promena.client.activemq.consumer.queue.response.error.selector=send_back_attempt <= send_back_retry_max_attempts
+promena.client.activemq.spring.jms.listener.auto-startup=true
+promena.client.activemq.spring.activemq.close-timeout=15s
+promena.client.activemq.spring.activemq.non-blocking-redelivery=false
+promena.client.activemq.spring.activemq.send-timeout=0ms
