--- a/intellij/promena-client/build.gradle
+++ b/intellij/promena-client/build.gradle
@@ -9,13 +9,13 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.2'
+    id 'org.jetbrains.intellij' version '0.4.10'
 }
 
 group 'pl.beone.promena.intellij.plugin'
 version '0.9.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenLocal()
@@ -24,6 +24,14 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.41"
+
+    implementation "pl.beone.promena.transformer:promena-transformer-internal:0.9.0-SNAPSHOT"
+    implementation("pl.beone.promena.core:promena-core-internal-serialization:0.9.0-SNAPSHOT") {
+        exclude group: 'com.esotericsoftware', module: 'kryo'
+    }
+    implementation 'pl.beone.promena.connector:promena-connector-http-application-model:0.9.0-SNAPSHOT'
+
+    implementation 'org.apache.tika:tika-core:1.22'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -34,7 +42,8 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 
 intellij {
-    version 'IC-2018.3.4'
+    version '2019.2.1'
+    plugins = ['java', 'kotlin']
     updateSinceUntilBuild false
 }
 
