[fixed][intellij][promena-client-plugin] Kotlin plugin name [improved][intellij][promena-client-plugin] Compiling file before transformation (now the whole module is made)

--- a/intellij/promena-client/build.gradle
+++ b/intellij/promena-client/build.gradle
@@ -43,7 +43,7 @@ apply plugin: 'kotlin'
 
 intellij {
     version '2019.2.1'
-    plugins = ['java', 'kotlin']
+    plugins = ['java', 'Kotlin']
     updateSinceUntilBuild false
 }
 
