--- a/intellij/promena-client/gradle/wrapper/gradle-wrapper.properties
+++ b/intellij/promena-client/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Tue Aug 27 07:45:23 CEST 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-bin.zip
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
