--- a/intellij/promena-client/build.gradle
+++ b/intellij/promena-client/build.gradle
@@ -1,15 +1,7 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.41"
-    }
-}
-
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.10'
+    id "org.jetbrains.kotlin.jvm" version "1.3.50"
 }
 
 group 'pl.beone.promena.intellij.plugin'
@@ -23,15 +15,15 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.41"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
 
-    implementation "pl.beone.promena.transformer:promena-transformer-internal:0.9.0-SNAPSHOT"
-    implementation("pl.beone.promena.core:promena-core-internal-serialization:0.9.0-SNAPSHOT") {
-        exclude group: 'com.esotericsoftware', module: 'kryo'
-    }
-    implementation 'pl.beone.promena.connector:promena-connector-http-application-model:0.9.0-SNAPSHOT'
+    compile "pl.beone.promena.transformer:promena-transformer-internal:0.9.0-SNAPSHOT"
+    compile("pl.beone.promena.core:promena-core-application-model:0.9.0-SNAPSHOT")
+    compile "pl.beone.promena.core:promena-core-internal-serialization:0.9.0-SNAPSHOT"
+    compile 'com.esotericsoftware:kryo:4.0.2'
+    compile 'pl.beone.promena.connector:promena-connector-http-application-model:0.9.0-SNAPSHOT'
 
-    implementation 'org.apache.tika:tika-core:1.22'
+    compile 'org.apache.tika:tika-core:1.22'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -40,6 +32,12 @@ apply plugin: 'idea'
 apply plugin: 'org.jetbrains.intellij'
 apply plugin: 'java'
 apply plugin: 'kotlin'
+
+configurations.all {
+    resolutionStrategy {
+        force 'com.esotericsoftware:kryo:4.0.2'
+    }
+}
 
 intellij {
     version '2019.2.1'
