--- a/intellij/promena-client/build.gradle
+++ b/intellij/promena-client/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile 'pl.beone.promena.connector:promena-connector-http-application-model:0.9.0-SNAPSHOT'
 
     compile 'org.apache.tika:tika-core:1.22'
-//    compile 'org.apache.httpcomponents:httpcore-nio:4.4.11'
+    compile 'io.projectreactor.netty:reactor-netty:0.8.10.RELEASE'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
