--- a/intellij/promena-client/build.gradle
+++ b/intellij/promena-client/build.gradle
@@ -1,13 +1,13 @@
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.10'
-    id "org.jetbrains.kotlin.jvm" version "1.3.50"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
 }
 
 group 'pl.beone.promena.intellij.plugin'
 version '0.9.0-SNAPSHOT'
 
-sourceCompatibility = 11
+sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenLocal()
@@ -15,29 +15,29 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.3.50'
 
-    compile "pl.beone.promena.transformer:promena-transformer-internal:0.9.0-SNAPSHOT"
-    compile "pl.beone.promena.core:promena-core-application-model:0.9.0-SNAPSHOT"
-    compile "pl.beone.promena.core:promena-core-internal-serialization:0.9.0-SNAPSHOT"
+    compile 'pl.beone.promena.transformer:promena-transformer-internal:0.9.0-SNAPSHOT'
+    compile 'pl.beone.promena.core:promena-core-application-model:0.9.0-SNAPSHOT'
+    compile 'pl.beone.promena.core:promena-core-internal-serialization:0.9.0-SNAPSHOT'
     compile 'pl.beone.promena.connector:promena-connector-http-application-model:0.9.0-SNAPSHOT'
 
     compile 'org.apache.tika:tika-core:1.22'
     compile 'io.projectreactor.netty:reactor-netty:0.8.10.RELEASE'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'junit:junit:4.12'
 }
-
-apply plugin: 'idea'
-apply plugin: 'org.jetbrains.intellij'
-apply plugin: 'java'
-apply plugin: 'kotlin'
 
 configurations.all {
     resolutionStrategy {
         force 'com.esotericsoftware:kryo:4.0.2'
     }
 }
+
+apply plugin: 'idea'
+apply plugin: 'org.jetbrains.intellij'
+apply plugin: 'java'
+apply plugin: 'kotlin'
 
 intellij {
     version '2019.2.1'
