--- a/intellij/promena-client/src/main/resources/META-INF/plugin.xml
+++ b/intellij/promena-client/src/main/resources/META-INF/plugin.xml
@@ -1,20 +1,17 @@
 <idea-plugin>
     <id>pl.beone.promena.intellijj.plugin.PromenaClient</id>
     <name>Promena client</name>
-    <description>...</description>
     <version>0.9.0-SNAPSHOT</version>
     <vendor>BeOne</vendor>
 
     <idea-version since-build="192"/>
 
     <depends>com.intellij.modules.java</depends>
-    <depends>org.jetbrains.kotlin</depends>
+    <depends optional="true" config-file="plugin-optional-kotlin.xml">org.jetbrains.kotlin</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <codeInsight.lineMarkerProvider language="JAVA"
                                         implementationClass="pl.beone.promena.intellij.plugin.linemarker.JavaRelatedItemLineMarkerProvider"/>
-        <codeInsight.lineMarkerProvider language="kotlin"
-                                        implementationClass="pl.beone.promena.intellij.plugin.linemarker.KotlinRelatedItemLineMarkerProvider"/>
     </extensions>
 
 </idea-plugin>
