[refactored][promena-core] Chains, imports, code style [improved][promena-core] Quality of exceptions [added][promena-parent] Akka Stream dependency

--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -75,6 +75,11 @@
             </dependency>
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-stream_2.12</artifactId>
+                <version>${akka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-cluster-metrics_2.12</artifactId>
                 <version>${akka.version}</version>
             </dependency>
