--- a/base/promena-core/external/promena-core-external-akka/pom.xml
+++ b/base/promena-core/external/promena-core-external-akka/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>promena-core-contract-akka</artifactId>
             <version>${promena-core.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-stream_2.12</artifactId>
+        </dependency>
     </dependencies>
 </project>
