--- a/base/promena-core/configuration/promena-core-configuration/pom.xml
+++ b/base/promena-core/configuration/promena-core-configuration/pom.xml
@@ -53,6 +53,10 @@
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-cluster_2.12</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-slf4j_2.12</artifactId>
         </dependency>
         <dependency>
