[improved][promena-core][alfresco-promena-http-client] Renamed TransformersCouldNotTransformException to NoTransformerCouldTransformException and TransformerCouldNotTransformException to TransformationIsNotSupportedException, canTransform to isSupported (in Transformer interface) [improved][promena-transformer-archetype] Adapted to new names

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>${rootArtifactId}-application-model</module>
         <module>${rootArtifactId}</module>
+        <module>${rootArtifactId}-example</module>
         <module>${rootArtifactId}-configuration</module>
     </modules>
     <packaging>pom</packaging>
