[improved] Changed communication from location (URI) to directory (File). Internal has parameter directory and external directoryPath [improved][promena-transformer] FileData is based on file instead of location

--- a/extension/communication/file/internal/promena-communication-file-internal-configuration/src/main/resources/extension-communication-file-internal.properties
+++ b/extension/communication/file/internal/promena-communication-file-internal-configuration/src/main/resources/extension-communication-file-internal.properties
@@ -1,2 +1,2 @@
 communication.file.internal.id=file
-communication.file.internal.location=file:/tmp
+communication.file.internal.directory.path=/tmp
