--- a/mm/alfresco-promena-activemq-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-activemq-client/src/test/resources/alfresco-global-test.properties
@@ -3,7 +3,7 @@ promena.client.serializer.kryo.buffer-size=104857600
 
 # memory/file
 promena.client.communication.external.id=file
-promena.client.communication.external.file.location=file:/tmp
+promena.client.communication.external.file.directory.path=/tmp
 
 promena.client.transformation.error.retry.enabled=true
 promena.client.transformation.error.retry.max-attempts=1
