--- a/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
+++ b/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
@@ -3,7 +3,7 @@ promena.client.serializer.kryo.buffer-size=104857600
 
 # memory/file
 promena.client.communication.external.id=memory
-promena.client.communication.external.file.location=
+promena.client.communication.external.file.directory.path=
 
 promena.client.transformation.error.retry.enabled=true
 promena.client.transformation.error.retry.max-attempts=20
