--- a/extension/communication/memory/internal/pom.xml
+++ b/extension/communication/memory/internal/pom.xml
@@ -14,12 +14,12 @@
     <artifactId>promena-communication-memory-internal</artifactId>
     <version>0.9.0-SNAPSHOT</version>
 
-    <name>[EXTENSION][COMMUNICATION][INTERNAL] Memory</name>
+    <name>[EXTENSION][COMMUNICATION][MEMORY] Internal</name>
 
     <packaging>pom</packaging>
     <modules>
-        <module>promena-communication-memory-internal-internal</module>
-        <module>promena-communication-memory-internal-configuration</module>
+        <module>internal</module>
+        <module>configuration</module>
     </modules>
 
     <repositories>
@@ -49,7 +49,7 @@
 
     <properties>
         <promena-communication-memory-internal.version>0.9.0-SNAPSHOT</promena-communication-memory-internal.version>
-        <promena-communication-memory-common.version>0.9.0-SNAPSHOT</promena-communication-memory-common.version>
+        <promena-communication-memory-model.version>0.9.0-SNAPSHOT</promena-communication-memory-model.version>
     </properties>
 
     <dependencies>
