--- a/extension/communication/memory/external/configuration/pom.xml
+++ b/extension/communication/memory/external/configuration/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>pl.beone.promena.communication.memory</groupId>
+        <groupId>pl.beone.promena.communication.memory.external</groupId>
         <artifactId>promena-communication-memory-external</artifactId>
         <version>0.9.0-SNAPSHOT</version>
     </parent>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>pl.beone.promena.communication.memory</groupId>
+            <groupId>pl.beone.promena.communication.memory.external</groupId>
             <artifactId>promena-communication-memory-external-internal</artifactId>
             <version>${promena-communication-memory-external.version}</version>
         </dependency>
