--- a/extension/communication/memory/external/pom.xml
+++ b/extension/communication/memory/external/pom.xml
@@ -10,7 +10,7 @@
         <version>0.9.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>pl.beone.promena.communication.memory</groupId>
+    <groupId>pl.beone.promena.communication.memory.external</groupId>
     <artifactId>promena-communication-memory-external</artifactId>
     <version>0.9.0-SNAPSHOT</version>
 
