--- a/extension/communication/memory/internal/internal/pom.xml
+++ b/extension/communication/memory/internal/internal/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>pl.beone.promena.communication.memory</groupId>
+        <groupId>pl.beone.promena.communication.memory.internal</groupId>
         <artifactId>promena-communication-memory-internal</artifactId>
         <version>0.9.0-SNAPSHOT</version>
     </parent>
