--- a/mm/alfresco-promena-http-client/pom.xml
+++ b/mm/alfresco-promena-http-client/pom.xml
@@ -65,7 +65,7 @@
         <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
         <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
         <maven-failsafe-plugin.version>3.0.0-M1</maven-failsafe-plugin.version>
-        <yuicompressor-maven-plugin.version>1.5.1</yuicompressor-maven-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
     </properties>
 
     <!-- Libs used in Unit and Integration tests -->
@@ -554,56 +554,6 @@
                 </dependencies>
             </plugin>
 
-            <!-- Compress JavaScript files and store as *-min.js -->
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>yuicompressor-maven-plugin</artifactId>
-                <version>${yuicompressor-maven-plugin.version}</version>
-                <executions>
-                    <!-- Compress the JS files under the assembly folder -->
-                    <execution>
-                        <id>compress-assembly</id>
-                        <goals>
-                            <goal>compress</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirectory>${project.basedir}/src/main/assembly/web</sourceDirectory>
-                            <outputDirectory>${project.basedir}/src/main/assembly/web</outputDirectory>
-                            <excludes>
-                                <exclude>**/webscripts/**</exclude>
-                                <exclude>**/site-webscripts/**</exclude>
-                                <exclude>**/META-INF/**</exclude>
-                                <exclude>**/*.lib.js</exclude>
-                                <exclude>**/*.css</exclude>
-                                <exclude>**/*-min.js</exclude>
-                                <exclude>**/*-min.css</exclude>
-                            </excludes>
-                            <force>true</force>
-                            <jswarn>false</jswarn>
-                        </configuration>
-                    </execution>
-                    <!-- Compress the JS files under the resources folder -->
-                    <execution>
-                        <id>compress-resources</id>
-                        <goals>
-                            <goal>compress</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/webscripts/**</exclude>
-                                <exclude>**/site-webscripts/**</exclude>
-                                <exclude>**/*.lib.js</exclude>
-                                <exclude>**/*.css</exclude>
-                                <exclude>**/*-min.js</exclude>
-                                <exclude>**/*-min.css</exclude>
-                            </excludes>
-                            <force>true</force>
-                            <jswarn>false</jswarn>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
             <!-- Hot reloading with JRebel -->
             <plugin>
                 <groupId>org.zeroturnaround</groupId>
@@ -643,7 +593,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
