--- a/mm/rendition/alfresco-promena-rendition/src/main/resources/alfresco/module/alfresco-promena-rendition/alfresco-global.properties
+++ b/mm/rendition/alfresco-promena-rendition/src/main/resources/alfresco/module/alfresco-promena-rendition/alfresco-global.properties
@@ -1,5 +1,2 @@
-## This Alfresco Platform Configuration file should be used for custom properties that are introduced by this module.
-## Define default values for all properties here.
-## System Administrators can override these values in environment specific configurations in
-## alfresco/tomcat/shared/classes/alfresco-global.properties.
-## 
+promena.rendition.transformation.timeout=5m
+promena.rendition.transformer.bean.name=
