--- a/intellij/promena-client/build.gradle
+++ b/intellij/promena-client/build.gradle
@@ -14,23 +14,40 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    kotlinVersion = '1.3.50'
+
+    promenaTransformerVersion = '0.9.0-SNAPSHOT'
+    promenaCoreVersion = '0.9.0-SNAPSHOT'
+    promenaCommunicationMemoryVersion = '0.9.0-SNAPSHOT'
+    promenaConnectorHttpVersion = '0.9.0-SNAPSHOT'
+
+    kryoVersion = '4.0.2'
+
+    tikaCoreVersion = '1.22'
+    reactorNettyVersion = '0.8.10.RELEASE'
+
+    junitVersion = '4.12'
+}
+
 dependencies {
-    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.3.50'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
-    compile 'pl.beone.promena.transformer:promena-transformer-internal:0.9.0-SNAPSHOT'
-    compile 'pl.beone.promena.core:promena-core-application-model:0.9.0-SNAPSHOT'
-    compile 'pl.beone.promena.core:promena-core-internal-serialization:0.9.0-SNAPSHOT'
-    compile 'pl.beone.promena.connector:promena-connector-http-application-model:0.9.0-SNAPSHOT'
+    compile "pl.beone.promena.transformer:promena-transformer-internal:$promenaTransformerVersion"
+    compile "pl.beone.promena.core:promena-core-application-model:$promenaCoreVersion"
+    compile "pl.beone.promena.core:promena-core-internal-serialization:$promenaCoreVersion"
+    compile "pl.beone.promena.communication.memory.model:promena-communication-memory-model-internal:$promenaCommunicationMemoryVersion"
+    compile "pl.beone.promena.connector:promena-connector-http-application-model:$promenaConnectorHttpVersion"
 
-    compile 'org.apache.tika:tika-core:1.22'
-    compile 'io.projectreactor.netty:reactor-netty:0.8.10.RELEASE'
+    compile "org.apache.tika:tika-core:$tikaCoreVersion"
+    compile "io.projectreactor.netty:reactor-netty:$reactorNettyVersion"
 
-    testCompile 'junit:junit:4.12'
+    testCompile "junit:junit:$junitVersion"
 }
 
 configurations.all {
     resolutionStrategy {
-        force 'com.esotericsoftware:kryo:4.0.2'
+        force "com.esotericsoftware:kryo:$kryoVersion"
     }
 }
 
