--- a/mm/rendition/alfresco-promena-rendition/pom.xml
+++ b/mm/rendition/alfresco-promena-rendition/pom.xml
@@ -18,6 +18,7 @@
         <kotlin-logging.version>1.7.3</kotlin-logging.version>
 
         <alfresco-promena-client.version>0.9.0-SNAPSHOT</alfresco-promena-client.version>
+        <alfresco-promena-http-client.version>0.9.0-SNAPSHOT</alfresco-promena-http-client.version>
 
         <!-- Alfresco Maven Plugin version to use -->
         <alfresco.sdk.version>4.0.0</alfresco.sdk.version>
@@ -78,9 +79,29 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.alfresco.module</groupId>
+            <artifactId>alfresco-promena-client</artifactId>
+            <version>${alfresco-promena-client.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.alfresco.module</groupId>
+            <artifactId>alfresco-promena-http-client</artifactId>
+            <version>${alfresco-promena-http-client.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
             <groupId>io.github.microutils</groupId>
             <artifactId>kotlin-logging</artifactId>
             <version>${kotlin-logging.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>${mockk.version}</version>
         </dependency>
 
         <dependency>
@@ -110,12 +131,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
-            <version>${mockk.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -400,7 +415,7 @@
                                 <resource>
                                     <directory>target</directory>
                                     <includes>
-                                        <include>${build.finalName}.jar</include>
+                                        <include>${build.finalName}.amp</include>
                                     </includes>
                                     <filtering>false</filtering>
                                 </resource>
@@ -456,7 +471,7 @@
                         <configuration>
                             <outputDirectory>${project.build.directory}/extensions</outputDirectory>
                             <includeScope>runtime</includeScope>
-                            <!-- IMPORTANT: if using amp dependencies only, add <includeTypes>amp</includeTypes> -->
+                            <includeTypes>amp</includeTypes>
                         </configuration>
                     </execution>
                 </executions>
