[added][alfresco-promena-client] Support for passing metadata for nodes to transform [improved][alfresco-promena-activemq-client] All parameters are serialized to one header (transformation_parameters and transformation_parameters_string) - left attempt and retry_max_attempts to keep the retying functionality [refactored][mm] Static imports

--- a/mm/client/alfresco-promena-http-client/pom.xml
+++ b/mm/client/alfresco-promena-http-client/pom.xml
@@ -8,7 +8,7 @@
     <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>[MM] alfresco-promena-http-client</name>
+    <name>[MM][CLIENT] alfresco-promena-http-client</name>
 
     <properties>
         <!--        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->
