--- a/mm/client/alfresco-promena-activemq-client/pom.xml
+++ b/mm/client/alfresco-promena-activemq-client/pom.xml
@@ -7,7 +7,7 @@
     <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>[MM] alfresco-promena-activemq-client</name>
+    <name>[MM][CLIENT] alfresco-promena-activemq-client</name>
 
     <properties>
         <!--        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->
