--- a/mm/client/alfresco-promena-client/pom.xml
+++ b/mm/client/alfresco-promena-client/pom.xml
@@ -8,7 +8,7 @@
     <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>[MM] alfresco-promena-client</name>
+    <name>[MM][CLIENT] alfresco-promena-client</name>
 
     <properties>
         <kotlin.version>1.3.50</kotlin.version>
